<resources>
    <string name="app_name">ReadTweet</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_compose_tweet">Compose Tweet</string>
    <string name="action_view_learning">Knowledge base</string>
    <string name="title_kb">Knowledge Base</string>
    <string name="title_show_tweet">Tweet</string>
    <string name="title_settings">Settings</string>
    <string name="action_view_settings">Settings</string>
    <string name="internet_na">Internet not available</string>
    <string name="goto_settings">Settings</string>
    <string name="title_how_it_works">How It Works</string>
    <string name="action_how_it_works">How it works</string>
    <string name="action_like_this">Like what you see?</string>
    <string name="share_using">Share</string>
    <string name="goto_top">Top</string>
    <string name="new_tweets_loaded">New tweets loaded</string>
    <string name="undo">Undo</string>
    <string name="tweet_marked_ignored">Tweet marked ignored</string>
</resources>
