<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_compose"
        android:orderInCategory="100"
        android:title="@string/action_compose_tweet"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_keywords"
        android:orderInCategory="100"
        android:title="@string/action_view_learning"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_view_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_how_it_works"
        android:orderInCategory="100"
        android:title="@string/action_how_it_works"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_like_this"
        android:orderInCategory="100"
        android:visible="false"
        android:title="@string/action_like_this"
        app:showAsAction="never" />

</menu>
